adding hosts file, updated php versions

--- a/bin/php56/Dockerfile
+++ b/bin/php56/Dockerfile
@@ -41,6 +41,9 @@ RUN a2enmod ssl \
     && a2ensite default-ssl \
     && c_rehash /etc/apache2/ssl/
 
+# Fix Permissions
+RUN usermod -u 1000 www-data
+
 EXPOSE 80
 
 EXPOSE 443
