--- a/bin/php81/Dockerfile
+++ b/bin/php81/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.0.11-apache-bullseye
+FROM php:8.1.0RC2-apache-bullseye
 
 # Surpresses debconf complaints of trying to install apt packages interactively
 # https://github.com/moby/moby/issues/4032#issuecomment-192327844
@@ -34,7 +34,7 @@ openssl && \
     curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 # Install xdebug
-RUN pecl install xdebug-3.0.4 && \
+RUN pecl install xdebug-3.1.0beta2 && \
     docker-php-ext-enable xdebug
 
 # Install redis
@@ -49,7 +49,7 @@ RUN apt-get update && \
 # Workarround until imagick is available in pecl with php8 support
 # Imagick Commit to install
 # https://github.com/Imagick/imagick
-ARG IMAGICK_COMMIT="132a11fd26675db9eb9f0e9a3e2887c161875206"
+ARG IMAGICK_COMMIT="fa77acfa830d931e36c7ab7a0008b491e21d5d19"
 
 RUN cd /usr/local/src && \
     git clone https://github.com/Imagick/imagick && \
@@ -69,7 +69,7 @@ RUN docker-php-ext-install pdo_mysql && \
     docker-php-ext-install pdo_sqlite && \
     docker-php-ext-install mysqli && \
     docker-php-ext-install curl && \
-    docker-php-ext-install tokenizer && \
+    #docker-php-ext-install tokenizer && \
     docker-php-ext-install zip && \
     docker-php-ext-install -j$(nproc) intl && \
     docker-php-ext-install mbstring && \
