--- a/sample.env
+++ b/sample.env
@@ -4,7 +4,7 @@
 # To determine the name of your containers
 COMPOSE_PROJECT_NAME="lamp"
 
-# Possible values: php54, php56, php71, php72, php73, php74, php80
+# Possible values: php54, php56, php70, php71, php72, php73, php74, php80, php81
 PHPVERSION="php80"
 DOCUMENT_ROOT="./www"
 APACHE_DOCUMENT_ROOT="/var/www/html"
