--- a/bin/php72/Dockerfile
+++ b/bin/php72/Dockerfile
@@ -64,3 +64,6 @@ RUN mkdir -p /var/run/apache2/
 RUN a2enmod ssl \
     && a2ensite default-ssl \
     && c_rehash /etc/apache2/ssl/
+
+# Fix Permissions
+RUN usermod -u 1000 www-data
