--- a/sample.env
+++ b/sample.env
@@ -16,7 +16,7 @@ PHP_INI="./config/php/php.ini"
 UPLOAD_LIMIT="512M"
 MEMORY_LIMIT="512M"
 
-# Possible values: mysql57, mysql8, mariadb103, mariadb104, mariadb105, mariadb106
+# Possible values: mysql57, mysql8, mariadb103, mariadb104, mariadb105, mariadb106, mariadb107
 DATABASE="mariadb106"
 MYSQL_DATA_DIR="./data/mysql"
 MYSQL_LOG_DIR="./logs/mysql"
