--- a/bin/php81/Dockerfile
+++ b/bin/php81/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.1.0RC6-apache-bullseye
+FROM php:8.1.0-apache-bullseye
 
 # Surpresses debconf complaints of trying to install apt packages interactively
 # https://github.com/moby/moby/issues/4032#issuecomment-192327844
@@ -44,23 +44,8 @@ RUN pecl install redis-5.3.4 && \
 # Install imagick
 RUN apt-get update && \
     apt-get -y --no-install-recommends install --fix-missing libmagickwand-dev && \
-    rm -rf /var/lib/apt/lists/*
-
-# Workarround until imagick is available in pecl with php8 support
-# Imagick Commit to install
-# https://github.com/Imagick/imagick
-ARG IMAGICK_COMMIT="008e12d7347433c1654d858cfa8f2ca981cde433"
-
-RUN cd /usr/local/src && \
-    git clone https://github.com/Imagick/imagick && \
-    cd imagick && \
-    git checkout ${IMAGICK_COMMIT} && \
-    phpize && \
-    ./configure && \
-    make && \
-    make install && \
-    cd .. && \
-    rm -rf imagick && \
+    rm -rf /var/lib/apt/lists/* && \
+    pecl install imagick && \
     docker-php-ext-enable imagick
 
 # Other PHP8 Extensions
