fix dns standards: change vhost from .local to .localhost

--- a/config/vhosts/default.conf
+++ b/config/vhosts/default.conf
@@ -10,7 +10,7 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerAdmin webmaster@projects
+    ServerAdmin webmaster@localhost
     DocumentRoot ${APACHE_DOCUMENT_ROOT}/dash
     ServerName localhost:443
     SSLEngine on
