--- a/config/vhosts/projects.conf
+++ b/config/vhosts/projects.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-    ServerAdmin webmaster@projects.local
+    ServerAdmin webmaster@projects.localhost
     DocumentRoot ${APACHE_DOCUMENT_ROOT}/projects
-    ServerName projects.local:80
+    ServerName projects.localhost:80
 	<Directory ${APACHE_DOCUMENT_ROOT}/projects>
 		AllowOverride all
         Options +Indexes +Includes +FollowSymLinks +MultiViews +ExecCGI
@@ -10,9 +10,9 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-    ServerAdmin webmaster@projects.local
+    ServerAdmin webmaster@projects.localhost
     DocumentRoot ${APACHE_DOCUMENT_ROOT}/projects
-    ServerName projects.local:443
+    ServerName projects.localhost:443
     SSLEngine on
     SSLCertificateFile "/etc/apache2/ssl/ssl.crt"
     SSLCertificateKeyFile "/etc/apache2/ssl/ssl.key"
