--- a/sample.env
+++ b/sample.env
@@ -4,7 +4,7 @@
 # To determine the name of your containers
 COMPOSE_PROJECT_NAME="lamp"
 
-# Possible values: php54, php56, php70, php71, php72, php73, php74, php80, php81
+# Possible values: php54, php56, php70, php71, php72, php73, php74, php80, php81, php82
 PHPVERSION="php81"
 DOCUMENT_ROOT="./www"
 APACHE_DOCUMENT_ROOT="/var/www/html"
@@ -16,8 +16,13 @@ PHP_INI="./config/php/php.ini"
 UPLOAD_LIMIT="512M"
 MEMORY_LIMIT="512M"
 
-# Possible values: mysql57, mysql8, mariadb103, mariadb104, mariadb105, mariadb106, mariadb107, mariadb108
-DATABASE="mariadb107"
+# Xdebug
+XDEBUG_LOG_DIR=./logs/xdebug
+XDEBUG_PORT=9003
+#XDEBUG_PORT=9000
+
+# Possible values: mysql57, mysql8, mariadb103, mariadb104, mariadb105, mariadb106, mariadb107, mariadb108, mariadb109, mariadb110
+DATABASE="mariadb109"
 MYSQL_INITDB_DIR="./config/initdb"
 MYSQL_DATA_DIR="./data/mysql"
 MYSQL_LOG_DIR="./logs/mysql"
@@ -33,6 +38,7 @@ HOST_MACHINE_MYSQL_PORT=3306
 
 # If you already have the port 8080 in use, you can change it (for example if you have PMA)
 HOST_MACHINE_PMA_PORT=8080
+HOST_MACHINE_PMA_SECURE_PORT=8443
 
 # If you already has the port 6379 in use, you can change it (for example if you have Redis)
 HOST_MACHINE_REDIS_PORT=6379
