--- a/bin/php82/Dockerfile
+++ b/bin/php82/Dockerfile
@@ -35,7 +35,7 @@ openssl && \
     curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 # Install xdebug
-RUN pecl install xdebug-3.2.0alpha3 && \
+RUN pecl install xdebug-3.2.0RC2 && \
     docker-php-ext-enable xdebug
 
 # Install redis
