--- a/bin/php73/Dockerfile
+++ b/bin/php73/Dockerfile
@@ -36,6 +36,7 @@ RUN docker-php-ext-install pdo_mysql && \
     docker-php-ext-install curl && \
     docker-php-ext-install tokenizer && \
     docker-php-ext-install json && \
+    docker-php-ext-install bcmath && \
     docker-php-ext-install zip && \
     docker-php-ext-install -j$(nproc) intl && \
     docker-php-ext-install mbstring && \
