--- a/sample.env
+++ b/sample.env
@@ -4,8 +4,8 @@
 # To determine the name of your containers
 COMPOSE_PROJECT_NAME="lamp"
 
-# Possible values: php54, php56, php70, php71, php72, php73, php74, php80, php81, php82
-PHPVERSION="php81"
+# Possible values: php54, php56, php70, php71, php72, php73, php74, php80, php81, php82, php83
+PHPVERSION="php83"
 DOCUMENT_ROOT="./www"
 APACHE_DOCUMENT_ROOT="/var/www/html"
 VHOSTS_DIR="./config/vhosts"
