support for MariaDB (lts, latest, 10.x, 10.3, 10.4, 10.5, 10.6, 10.7, 10.8, 10.9, 10.10, 10.11, 11.x, 11.0, 11.1, 11.2, 11.3-rc) mariadb* removed mariadblts, mariadblatest, mariadb10, mariadb1003, mariadb1004, mariadb1005, mariadb1006, mariadb1007, mariadb1008, mariadb1009, mariadb1010, mariadb1011, mariadb11, mariadb1100, mariadb1101, mariadb1102, mariadb1103 added

--- a/sample.env
+++ b/sample.env
@@ -21,8 +21,8 @@ XDEBUG_LOG_DIR=./logs/xdebug
 XDEBUG_PORT=9003
 #XDEBUG_PORT=9000
 
-# Possible values: mysql57, mysql8, mariadb103, mariadb104, mariadb105, mariadb106, mariadb107, mariadb108, mariadb109, mariadb110
-DATABASE="mariadb109"
+# Possible values: mysql57, mysql8, mariadblts, mariadblatest, mariadb10, mariadb1003, mariadb1004, mariadb1005, mariadb1006, mariadb1007, mariadb1008, mariadb1009, mariadb1010, mariadb1011, mariadb11, mariadb1100, mariadb1101, mariadb1102, mariadb1103
+DATABASE="mariadblts"
 MYSQL_INITDB_DIR="./config/initdb"
 MYSQL_DATA_DIR="./data/mysql"
 MYSQL_LOG_DIR="./logs/mysql"
